<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <TextView
        android:id="@+id/hello_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:gravity="top"
        android:text="@string/welcome"
        android:textAppearance="@style/hello_user"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ringkasan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="1sp"
        android:text="@string/facialbot_splash_screen"
        android:textAppearance="@style/ringkasan"
        android:textStyle="bold"
        android:translationY="-0.32sp"
        app:layout_constraintStart_toStartOf="@+id/hello_user"
        app:layout_constraintTop_toBottomOf="@+id/hello_user" />

    <View
        android:id="@+id/rectangle_profile"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/profil_rec2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/profile_icon"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/profile"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_profile"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_profile"
        app:layout_constraintStart_toStartOf="@+id/rectangle_profile"
        app:layout_constraintTop_toTopOf="@+id/rectangle_profile" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/hasil_deteksi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ringkasan"
        app:layout_constraintVertical_bias="0.277">

    </ImageView>

    <TextView
        android:id="@+id/hasil_deteksi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="264dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="1sp"
        android:text="@string/last_detection"
        android:textAppearance="@style/hasil_deteksi"
        android:textStyle="bold"
        android:translationY="-0.32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/lihat_lebih"
        android:layout_width="11dp"
        android:layout_height="18dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="48dp"
        android:background="@drawable/ic_see_more_black"
        app:layout_constraintBottom_toBottomOf="@+id/hasil_deteksi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hasil_deteksi"
        app:layout_constraintVertical_bias="0.888" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="28dp"
        android:src="@drawable/skin_image"
        android:backgroundTint="@color/green_500"
        app:tint="@color/white"
        app:fabCustomSize="80dp"
        app:maxImageSize="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>